agregue micro stylos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <section class="card">
                     <img src="asset/images/image-equilibrium.jpg" alt="" class="card__img">
                     <div class="card__description">
-                        <h2>Equilibrium #3429</h2>
+                        <h2 class="description__title">Equilibrium #3429</h2>
                         <p>Our equilibrium collection promotes balance and calm.</p>
                     </div>
                     <div class="card__quote">
