agrgue box-show

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="card__author">
                         <span class="author__avatar"></span>
-                        <p class="author__description">Creation of <span>Jules Wyvern</span> </p>
+                        <p class="author__description">Creation of <span class="author__description-name">Jules Wyvern</span> </p>
                     </div>
                 </section>
             </article>
