Todos los eestylos :hover estan listo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <main>
             <article class="container">
                 <section class="card">
-                    <img src="asset/images/image-equilibrium.jpg" alt="" class="card__img">
+                    <figure class="card_container-img">
+                        <img src="asset/images/image-equilibrium.jpg" alt="" class="card__img">
+                        <div class="card__container-hover">
+                            <span class="card__hover-checkout"></span>
+                        </div>
+                    </figure>
                     <div class="card__description">
                         <h2 class="description__title">Equilibrium #3429</h2>
                         <p>Our equilibrium collection promotes balance and calm.</p>
