--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
         <title>nftCart</title>
         <link rel="stylesheet" href="css/style.css ">
+        <link rel="stylesheet" href="css/movile.css" media="(min-width = 600px)">
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
     </head>
     <body>
